--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<HTML>
-<style>
-body {
-  background-image: url('untitled.png');
-}
-</style>
-<BODY>
-HEy big keagon
-<BODY/>
-<HTML/>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="mystyle.css">
+</head>
+<body>
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
