--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
   <a class="active" href="index.html">Home</a>
   <a href="s.html">Find Us</a>
   <a href="order.html">Order</a>
+  <a href="chips.html">What We Sale</a>
 </div>
 
 <h1>We're Selling Chips!</h1>
 <p>Forgot to bring lunch? Well no worries! We're selling chips for just a $1</p>
+
+<footer>
+  <p>Made by ALXANDER</p>
+</footer>
 
 </body>
 </html>
